--- a/InspiringIPT/InspiringIPT/Views/Cursos/Edit.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Cursos/Edit.cshtml
@@ -18,7 +18,7 @@
 }
 <div class="row">
     <br />
-    <div class="col-sm-14" style="background-color:lavenderblush;">
+    <div class="col-sm-14" style="background-color:lavenderblush;text-align:center">
         <h2 class="page-header">@ViewBag.Title <small>Atualizar Curso <i class="glyphicon glyphicon-education"></i></small></h2>
     </div>
     @using (Html.BeginForm())
