--- a/InspiringIPT/InspiringIPT/Views/PotencialAluno/Create.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/PotencialAluno/Create.cshtml
@@ -86,7 +86,7 @@
                             @Html.RadioButtonFor(model => model.HabAcademicas, "Licenciatura") Licenciatura<br />
                             @Html.RadioButtonFor(model => model.HabAcademicas, "Mestrado") Mestrado<br />
                             @Html.RadioButtonFor(model => model.HabAcademicas, "Doutoramento") Doutoramento<br />
-                            @Html.RadioButtonFor(model => model.HabAcademicas, "Grau académico superior estrangeiro") Grau académico superior estrangeiro<br />
+                            @Html.RadioButtonFor(model => model.HabAcademicas, "Grau Académico Superior Estrangeiro") Grau Académico Auperior Estrangeiro<br />
                             @Html.ValidationMessageFor(model => model.HabAcademicas, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -98,7 +98,7 @@
                         @* listagem dos Cursos disponíveis no IPT  *@
                         <table class="table">
                             <tr>
-                                <th>Cursos</th>
+                                <th>Cursos:</th>
                             </tr>
                             <tr>
                                 <td>
@@ -118,7 +118,7 @@
                         @* listagem das Áreas disponíveis no IPT  *@
                         <table class="table">
                             <tr>
-                                <th>Áreas de Interesse</th>
+                                <th>Áreas de Interesse:</th>
                             </tr>
                             <tr>
                                 <td>
@@ -138,7 +138,7 @@
                         @* listagem dos Tipos de Cursos disponíveis no IPT  *@
                         <table class="table">
                             <tr>
-                                <th>Tipos de Cursos</th>
+                                <th>Tipos de Cursos:</th>
                             </tr>
                             <tr>
                                 <td>
