--- a/InspiringIPT/InspiringIPT/Views/Shared/_Layout.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Shared/_Layout.cshtml
@@ -68,7 +68,7 @@
                                 <li>@Html.ActionLink("Listar Cursos", "Index", "Cursos")</li>
                                 <li>@Html.ActionLink("Listar Tipo Curso", "Index", "TipoCurso")</li>
                                 <li>@Html.ActionLink("Listar Áreas", "Index", "Areas")</li>
-                                <li>@Html.ActionLink("Listar Escolas", "Index", "Escola")</li>
+                                <li>@Html.ActionLink("Listar Escolas", "Index", "Escolas")</li>
                               
                             </ul>
                         </li>
