--- a/InspiringIPT/InspiringIPT/Views/Cursos/Create.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Cursos/Create.cshtml
@@ -16,10 +16,10 @@
         </div>
     </div>
 }
-<br />
+<br /><br />
 <div class="row">
     <div class="col-sm-14" style="background-color:lavenderblush;">
-        <h2 class="page-header">@ViewBag.Title <small>Adicionar Curso<i class="glyphicon glyphicon-book"></i></small></h2>
+        <h2 class="page-header">@ViewBag.Title <small>Adicionar novo Curso<i class="glyphicon glyphicon-book"></i></small></h2>
     </div>
     <div class="col-sm-14" style="background-color:lavender">
 
