--- a/InspiringIPT/InspiringIPT/Views/Cursos/Edit.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/Cursos/Edit.cshtml
@@ -56,7 +56,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.AreaFK, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.DropDownList("AreasFK", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownList("AreaFK", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.AreaFK, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.TipoCursoFK, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.DropDownList("TiposCursosFK", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownList("TipoCursoFK", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.TipoCursoFK, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -72,7 +72,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.EscolaFK, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.DropDownList("EscolasFK", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownList("EscolaFK", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.EscolaFK, "", new { @class = "text-danger" })
                     </div>
                 </div>
