--- a/InspiringIPT/InspiringIPT/Views/PotencialAluno/Edit.cshtml
+++ b/InspiringIPT/InspiringIPT/Views/PotencialAluno/Edit.cshtml
@@ -83,10 +83,12 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Genero, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Genero, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.RadioButtonFor(model => model.Genero, "M") Masculino <br />
+                        @Html.RadioButtonFor(model => model.Genero, "F") Feminino
                         @Html.ValidationMessageFor(model => model.Genero, "", new { @class = "text-danger" })
                     </div>
                 </div>
+
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.DataInscricao, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -96,13 +98,17 @@
                     </div>
                 </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.HabAcademicas, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.HabAcademicas, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.HabAcademicas, "", new { @class = "text-danger" })
+               <div class="form-group">
+                        @Html.LabelFor(model => model.HabAcademicas, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.RadioButtonFor(model => model.HabAcademicas, "12º ano") 12º ano <br />
+                            @Html.RadioButtonFor(model => model.HabAcademicas, "Licenciatura") Licenciatura<br />
+                            @Html.RadioButtonFor(model => model.HabAcademicas, "Mestrado") Mestrado<br />
+                            @Html.RadioButtonFor(model => model.HabAcademicas, "Doutoramento") Doutoramento<br />
+                            @Html.RadioButtonFor(model => model.HabAcademicas, "Grau Académico Superior Estrangeiro") Grau Académico Auperior Estrangeiro<br />
+                            @Html.ValidationMessageFor(model => model.HabAcademicas, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                </div>
 
                 <div class="col-md-4">
                     @* listagem dos Cursos disponíveis no IPT  *@
